# PL_Exs

./: .gitignore
G50/: README.txt
G50/Eduardo Binns/Practica #1/Ejercicio #1/: CMakeLists.txt  main.c
G50/Eduardo Binns/Practica #1/Ejercicio #2/: CMakeLists.txt  main.c
G50/Eduardo Binns/Practica #1/Ejercicio #3/: CMakeLists.txt  main.c
G50/Eduardo Binns/Practica #1/Ejercicio #4/: CMakeLists.txt  main.c
G50/Eduardo Binns/Practica #1/Ejercicio #5/: CMakeLists.txt  main.c
G50/Eduardo Binns/Practica #1/Ejercicio #6/: CMakeLists.txt  main.c
G50/Eduardo Binns/Practica #1/Ejercicio #7/: CMakeLists.txt  main.c
G50/Eduardo Binns/Practica #2/Ejercicio #1 P2/: CMakeLists.txt  main.c
G50/Eduardo Binns/Practica #2/Ejercicio #1 Punteros Genericos/: CMakeLists.txt
G50/Francisco Soto/Funcional/: 1.rkt  10.rkt  11.rkt  12.rkt  2.rkt  3.rkt  4.rkt  5.rkt  6.rkt  7.rkt  8.rkt  9.rkt
G50/Sebastian_Rojas_Vargas/Diagnostico2/: Ejercicio1_MAP.c  Ejercicio2_Parecido.c
G50/dani0105/: CMakeLists.txt  main.c
G50/dani0105/clase4/: listaPersonas.c  listaPersonas.h  map.c
G50/dani0105/curso/: main.c
G50/dani0105/curso/C/: CMakeLists.txt  main.c
G50/dani0105/curso/C/clase3/: clase3.c
G50/dani0105/curso/C/clase4/: class4.h  map.h
G50/dani0105/curso/C/clase5/: clase5.c
G50/dani0105/curso/C/practica1/: Practica1.c
G50/dani0105/curso/C/test/: list.h
G50/dani0105/practica1/: Practica1.c  Practica1.h
G50/dani0105/proyectos/image/: CMakeLists.txt  image.cpp  image.h  param.c
G50/dani0105/proyectos/postal/: CMakeLists.txt  main.c
G51/: README.txt
(+173 files in other folders)
