cmake_minimum_required(VERSION 3.17)
project(Semana3 C)

set(CMAKE_C_STANDARD 99)

add_executable(
        Semana3
        main.c
        practica1/Practica1.c
        practica1/Practica1.h
        clase4/map.c
        clase4/map.h
        clase4/listaPersonas.c
        clase4/listaPersonas.h
        clase3/clase3.c
        clase3/clase3.h
        clase4/class4.c
        clase4/class4.h
        clase5/clase5.c
        clase5/clase5.h
        test/list.c
        test/list.h)